--- a/app/pages/checkers-page/checker-board/checker-board.scss
+++ b/app/pages/checkers-page/checker-board/checker-board.scss
@@ -1,14 +1,24 @@
+.checker-board-page {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
 .board {
-    border: 4em solid lightblue;
+    height: 100%;
     display: grid;
     grid-template-columns: 54px 54px 54px 54px 54px 54px 54px 54px;
     grid-template-rows: 54px 54px 54px 54px 54px 54px 54px 54px;
     background-color: lightblue;
     justify-content: center;
+    align-content: center;
 }
 
 .tile {
     background-color: white;
+    width: 100%;
+    height: 100%;
 
     &.even {
         background-color: black;
